simple-nginx/service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
spec:
  selector:
    app: hello-openshift
  type: ClusterIP
  ports:
  - name: hello-openshift
    protocol: TCP
    port: 8080
    targetPort: 8080
