simple-nginx/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-openshift
  namespace: pibarrap044-dev
  labels: {}
spec:
  to:
    kind: Service
    name: hello-openshift
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: hello-openshift
  alternateBackends: []
